--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = teensy
 board = teensy40
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit BMP3XX Library@^2.1.6
+	adafruit/Adafruit MPU6050@^2.2.6
