--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit BMP3XX Library@^2.1.6
 	adafruit/Adafruit MPU6050@^2.2.6
+	argandas/serialEEPROM@^2.0.1
+	dantudose/AT24C256 library@^1.0
